WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170887
[JSCOnly] Fix build failures in macOS
https://bugs.webkit.org/show_bug.cgi?id=170887
Summary
[JSCOnly] Fix build failures in macOS
Yusuke Suzuki
Reported
2017-04-16 08:55:00 PDT
[JSCOnly] Fix build failures in macOS
Attachments
Patch
(4.42 KB, patch)
2017-04-16 08:56 PDT
,
Yusuke Suzuki
achristensen
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-elcapitan-wk2
(871.03 KB, application/zip)
2017-04-16 10:14 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2017-04-16 08:56:24 PDT
Created
attachment 307230
[details]
Patch
Build Bot
Comment 2
2017-04-16 10:13:59 PDT
Comment on
attachment 307230
[details]
Patch
Attachment 307230
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3546351
New failing tests: webrtc/multi-video.html
Build Bot
Comment 3
2017-04-16 10:14:00 PDT
Created
attachment 307232
[details]
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Yusuke Suzuki
Comment 4
2017-04-17 06:51:27 PDT
Committed
r215408
: <
http://trac.webkit.org/changeset/215408
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug