[JSCOnly] Fix build failures in macOS https://bugs.webkit.org/show_bug.cgi?id=170887

Reviewed by Alex Christensen.

.:

Align ICU header configuration to MacCMake port.

* Source/cmake/OptionsJSCOnly.cmake:

Source/JavaScriptCore:

Align ICU header configuration to MacCMake port.

* PlatformJSCOnly.cmake:

Source/WTF:

JSCOnly port does not use mac/MainThread.cpp.
We change the ifdef gurard to use generic implementaion in JSCOnly on macOS.

* wtf/MainThread.cpp:
* wtf/PlatformJSCOnly.cmake:

Canonical link: https://commits.webkit.org/187823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215408 268f45cc-cd09-0410-ab3c-d52691b4dbfc