Source/JavaScriptCore/PlatformJSCOnly.cmake
@@ -8,3 +8,9 @@ if (USE_GLIB)
         ${GLIB_LIBRARIES}
     )
 endif ()
+
+if (APPLE)
+    list(APPEND JavaScriptCore_INCLUDE_DIRECTORIES
+        ${JAVASCRIPTCORE_DIR}/icu
+    )
+endif ()
